--- a/requirements.txt
+++ b/requirements.txt
@@ -131,6 +131,8 @@ WALinuxAgent==2.2.45
 websocket-client==0.57.0
 Werkzeug==0.16.0
 wrapt==1.12.1
+yahoo_fin==0.8.6
+yfinance==0.1.55
 zipline==1.4.0
 zipp==3.1.0
 zope.interface==4.3.2
